--- a/styleform.css
+++ b/styleform.css
@@ -20,7 +20,7 @@
     flex-direction: column;
 }
 
-.form-1 input {
+.input-principal {
     padding: 5px;
     margin: 2px;
     border: 1px solid #8a8888;
